--- a/DX12.vcxproj
+++ b/DX12.vcxproj
@@ -35,6 +35,8 @@
     <ClCompile Include="common\MeshLoader.cpp" />
     <ClCompile Include="common\Waves.cpp" />
     <ClCompile Include="InitDirect3DApp\InitDirect3DApp.cpp" />
+    <ClCompile Include="InstancingAndCulling\FrameResource.cpp" />
+    <ClCompile Include="InstancingAndCulling\InstancingAndCulling.cpp" />
     <ClCompile Include="LandAndWaves\FrameResource.cpp" />
     <ClCompile Include="LandAndWaves\LandAndWaves.cpp" />
     <ClCompile Include="LitColumns\FrameResource.cpp" />
@@ -82,6 +84,8 @@
     <ClInclude Include="common\MeshLoader.h" />
     <ClInclude Include="common\Waves.h" />
     <ClInclude Include="InitDirect3DApp\InitDirect3DApp.h" />
+    <ClInclude Include="InstancingAndCulling\FrameResource.h" />
+    <ClInclude Include="InstancingAndCulling\InstancingAndCulling.h" />
     <ClInclude Include="LandAndWaves\FrameResource.h" />
     <ClInclude Include="LandAndWaves\LandAndWaves.h" />
     <ClInclude Include="LitColumns\FrameResource.h" />
@@ -203,6 +207,14 @@
       <FileType>Document</FileType>
     </None>
     <None Include="CameraAndDynamicIndexingApp\LightingUtil.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="InstancingAndCulling\Default.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="InstancingAndCulling\LightingUtil.hlsl">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
