--- a/DX12.vcxproj
+++ b/DX12.vcxproj
@@ -59,6 +59,8 @@
     <ClCompile Include="math\Vec3.cpp" />
     <ClCompile Include="math\Vec4.cpp" />
     <ClCompile Include="MultiTexBox\MultiTexBox.cpp" />
+    <ClCompile Include="NormalMap\FrameResource.cpp" />
+    <ClCompile Include="NormalMap\NormalMap.cpp" />
     <ClCompile Include="ShapesApp\FrameResource.cpp" />
     <ClCompile Include="ShapesApp\ShapesApp.cpp" />
     <ClCompile Include="ShapesSkullApp\FrameResource.cpp" />
@@ -112,6 +114,8 @@
     <ClInclude Include="math\Vec3.h" />
     <ClInclude Include="math\Vec4.h" />
     <ClInclude Include="MultiTexBox\MultiTexBox.h" />
+    <ClInclude Include="NormalMap\FrameResource.h" />
+    <ClInclude Include="NormalMap\NormalMap.h" />
     <ClInclude Include="platform\PlatformConfig.h" />
     <ClInclude Include="ShapesApp\FrameResource.h" />
     <ClInclude Include="ShapesApp\ShapesApp.h" />
@@ -259,6 +263,20 @@
       <FileType>Document</FileType>
     </None>
     <None Include="DynamicCube\Sky.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NormalMap\Common.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="NormalMap\Default.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="NormalMap\LightingUtil.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="NormalMap\Sky.hlsl">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
